--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
 
     ext {
         support_version = '25.2.0'
-        kotlin_version = '1.1.0'
+        kotlin_version = '1.1.2-3'
     }
 
     repositories {
