--- a/kaxtui/build.gradle
+++ b/kaxtui/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     compile "com.android.support:support-v4:$support_version"
     compile "com.android.support:appcompat-v7:$support_version"
+    compile "com.android.support:support-annotations:$support_version"
 
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
