--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ buildscript {
 
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.1.2'
     }
 }
