--- a/kaxtui/build.gradle
+++ b/kaxtui/build.gradle
@@ -30,4 +30,13 @@ android {
         versionName libVersionName
     }
 
+    task androidSourcesJar(type: Jar) {
+        from android.sourceSets.main.java.source
+        classifier = 'sources'
+    }
+
+    artifacts {
+        archives androidSourcesJar
+    }
+
 }
