--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.21.0'
         classpath 'com.android.tools.build:gradle:3.4.0'
     }
 }
+
+apply plugin: 'com.github.ben-manes.versions'
